fixed overlapping elements during animation issue

--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ nav ul li:active {
   @keyframes fade-in {
     from {
       opacity: 0;
-      transform: translateY(-30svh) scale(0.8);
+      transform: translateY(-15svh) scale(0.8);
     }
     to {
       opacity: 1;
@@ -156,9 +156,12 @@ nav ul li:active {
 }
 
 .spotlight-project div {
-  transition: all 0.3s ease;
   height: 100%;
   width: 100%;
+}
+
+.project {
+  transition: all 0.3s ease;
 }
 
 .project:hover {
